--- a/category-info.html
+++ b/category-info.html
@@ -28,7 +28,7 @@
           </a>
           <div class="dropdown-menu" style="background-color: #3f4952;" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" style="color: white;" href="cart.html">Ver mi carrito</a>
-            <a class="dropdown-item" style="color: white;" href="#">Mi perfil</a>
+            <a class="dropdown-item" style="color: white;" href="my-profile.html">Mi perfil</a>
             <a class="dropdown-item" style="color: white;" id="logOut" href="#">Cerrar sesión</a>
           </div>
     </div>
