--- a/products.html
+++ b/products.html
@@ -5,6 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
+
+  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+
     <title>eMercado - Todo lo que busques está aquí</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -32,7 +37,7 @@
             </a>
             <div class="dropdown-menu" style="background-color: #3f4952;" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item" style="color: white;" href="cart.html">Ver mi carrito</a>
-              <a class="dropdown-item" style="color: white;" href="#">Mi perfil</a>
+              <a class="dropdown-item" style="color: white;" href="my-profile.html">Mi perfil</a>
               <a class="dropdown-item" style="color: white;" id="logOut" href="#">Cerrar sesión</a>
             </div>
       </div>
@@ -72,7 +77,7 @@
           </div>
           <div class="row justify-content-end">
             <div class="col-md-6">
-              <input id="searchBar" type="text" placeholder="Buscador">
+              <input id="searchBar" type="text" style="float-left; width: 375px;" placeholder="Buscador">
             </div>
               <div class="col-md-6 col-sm-12 mb-1 container">
                 <div class="row container p-0 m-0">
@@ -94,8 +99,8 @@
                 </div>
               </div>
           </div>
-          <div class="row">
-              <div class="list-group" id="cat-list-container">
+          <div class="container">
+              <div class="row row-cols-1 row-cols-md-4" id="cat-list-container">
               </div>
           </div>
       </div>
